--- a/HomeWork25/UI-ROUTER/app/views/about.html
+++ b/HomeWork25/UI-ROUTER/app/views/about.html
@@ -1,1 +1,4 @@
-<p>This is the about view.</p>
+<div class="jumbotron text-center">
+    <h1>The About Page</h1>
+    <p>This page demonstrates <span class="text-danger">nested</span> views.</p>    
+</div>
